# routes/AirdropRoute/large-different-amount-airdrop.route.ts
@@ -17,17 +17,18 @@ import { pushRawTransaction } from "../../utils/blockcypher.api";
 Bitcoin.initEccLib(ecc);
 
 //create a new instance of the express router
-const DifferentAmountRouter = Router();
+const DifferentAmountAirdropRouter = Router();
 
 // @route    POST api/different-amount
 // @desc     This endpoint is used to transfer different-amount rune token to different addresses.
 // @access   Private
 
-DifferentAmountRouter.post(
-  "/different-amount",
+DifferentAmountAirdropRouter.post(
+  "/large-different-amount-airdrop",
   check("rune_id", "Rune Id is required").notEmpty(),
   check("feeRate", "FeeRate is required").notEmpty(),
   check("data", "Data is required").notEmpty(),
+  check("txid", "TxID is required").notEmpty(),
 
   async (req: Request, res: Response) => {
     try {
@@ -37,14 +38,21 @@ DifferentAmountRouter.post(
         return res.status(500).json({ error: errors.array() });
       }
       // Getting parameter from request
-      const { rune_id, feeRate, data } = req.body;
-      if (data.length > SPLIT_ADDRESS_SIZE) {
-        return res.status(500).send({ error: `the size of address list is more than ${SPLIT_ADDRESS_SIZE}` })
+      const { rune_id, feeRate, data, txid
+      } = req.body;
+
+      let largeData: Array<any> = [];
+      for (let i = 0; i < 12; i++) {
+        largeData.push(...data)
       }
+      if (largeData.length > SPLIT_ADDRESS_SIZE * 8) {
+        return res.status(500).send({ error: `the size of address list is more than ${SPLIT_ADDRESS_SIZE * 8}` })
+      }
+
       // First airdrop from master wallet
       app.locals.walletIndex = 0;
       // Split large address data into smaller data array
-      let splitDataArray: Array<any> = splitData(data, SPLIT_ADDRESS_SIZE);
+      let splitDataArray: Array<any> = splitData(largeData, SPLIT_ADDRESS_SIZE);
 
       // Array => one item has btc anount, rune token amount
       let bundledDataArray: Array<any> = [];
@@ -96,13 +104,13 @@ DifferentAmountRouter.post(
       ////////////////////////////////////////////////////////////////////////////////
       //
       // broadcast transaction
-      const txid: any = await pushBtcPmt(response.data, networkType);
+      // const txid: any = await pushBtcPmt(response.data, networkType);
       //
       ////////////////////////////////////////////////////////////////////////////////
 
       ////////////////////////////////////////////////////////////////////////////////
       // remove on live version
-      // const txid: string =
+      // txid: string =
       //   "7503d93f8c6a62410ea90a9427519f9907667df5627a3c3cd7dde53d908bbd11";
       //
       ////////////////////////////////////////////////////////////////////////////////
@@ -145,4 +153,4 @@ DifferentAmountRouter.post(
   }
 );
 
-export default DifferentAmountRouter;
+export default DifferentAmountAirdropRouter;
